--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 
 
 .font-verde-claro{
-    color: #E8F8F5;
+    color: #222;
 }
 .font-verde-oscuro{
     color: #48C9B0;
@@ -25,7 +25,7 @@ a:hover{
 }
 
 h3{
-    color: #48C9B0 ;
+    color: #000 ;
 }
 
 main img{
@@ -53,7 +53,7 @@ header{
     padding: 5px 10px;
 }
 .cabecera-top a{
-    color: #fff;
+    color: #000;
 }
 .cabecera-top > div{
     max-width: 200px;
