--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,7 +267,7 @@ footer.container-fluid{
     margin: 0 auto;
 }
 .creditos a{
-    color: blue ;
+    color: white ;
 }
 .creditos a:hover{
     color: #007bff ;
